Close #8 by starting MEGAcmdServer when Mega.init is called